fix word-break at address css container

--- a/assets/css/crypto-donations/crypto-donations.css
+++ b/assets/css/crypto-donations/crypto-donations.css
@@ -32,6 +32,8 @@
   padding: 5px;
   border-radius: 3px;
   display: inline-block;
+  word-break: break-all;
+  word-wrap: break-word;
 }
 
 .jekyll-crypto-donations__crypto-buttons {
